# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
aoc2020/day01/: CMakeLists.txt  p1.c
aoc2020/day02/: p1.cpp  p2.cpp
aoc2020/day03/: p1.cpp  p2.cpp
aoc2020/day04/: p1.cpp  p2.cpp
aoc2020/day05/: p1.cpp  p2.cpp
aoc2020/day06/: p1.cpp  p2.cpp
aoc2020/day07/: p1.cpp  p2.cpp
aoc2020/day08/: p1.cpp  p2.cpp
aoc2020/day09/: p1.cpp  p2.cpp
aoc2020/day10/: p1.cpp
aoc2020/day11/: p1.cpp  p2.cpp
aoc2020/day12/: p1.cpp  p2.cpp
aoc2020/day13/: p1.cpp  p2.cpp
aoc2021/: CMakeLists.txt
aoc2021/day1/: CMakeLists.txt  main.cpp
aoc2021/day2/: main.cpp
aoc2021/day3/: CMakeLists.txt  main.cpp
aoc2022/: CMakeLists.txt  create_new_day.sh
aoc2022/day1/: CMakeLists.txt  main.cpp
aoc2022/day2/: CMakeLists.txt  main.cpp
aoc2022/day3/: CMakeLists.txt  main.cpp
aoc2022/day4/: CMakeLists.txt  main.cpp
aoc2022/day5/: CMakeLists.txt  main.cpp
aoc2022/day6/: CMakeLists.txt  main.cpp
aoc2022/day7/: CMakeLists.txt  main.cpp
aoc2022/day8/: CMakeLists.txt  main.cpp
aoc2023/: day1.cpp  day2.cpp  day3.cpp
common/: CMakeLists.txt  Makefile  readlines.hpp
